[inputFramed] fix focusvisible

--- a/packages/scss/src/components/inputFramed/component.scss
+++ b/packages/scss/src/components/inputFramed/component.scss
@@ -32,16 +32,6 @@
 			}
 		}
 
-		.inputFramed-header-input.radioField-input,
-		.inputFramed-header-input.checkboxField-input {
-			~ .inputFramed-header-icon.radioField-icon,
-			~ .inputFramed-header-icon.checkboxField-icon {
-				&::after {
-					outline: none;
-				}
-			}
-		}
-
 		.inputFramed-header {
 			padding: var(--components-inputFramed-header-padding);
 			border-radius: var(--pr-t-border-radius-50);
